--- a/index.html
+++ b/index.html
@@ -2210,6 +2210,18 @@
                 padding-bottom: 120px;
             }
 
+            .hero-content {
+                background: linear-gradient(180deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.35));
+                padding: 28px 22px;
+                border-radius: 22px;
+                box-shadow: 0 18px 45px rgba(0, 0, 0, 0.35);
+            }
+
+            .hero-content h1,
+            .hero-content p {
+                color: var(--white);
+            }
+
             .hero h1 {
                 font-size: 2.5rem;
             }
@@ -2353,6 +2365,11 @@
             .hero-slide .container {
                 padding-top: 150px;
                 padding-bottom: 110px;
+            }
+
+            .hero-content {
+                padding: 24px 18px;
+                border-radius: 18px;
             }
 
             .hero-actions {
