--- a/index.html
+++ b/index.html
@@ -179,6 +179,335 @@
             font-size: 0.79rem;
         }
 
+        .live-chat-whatsapp {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            padding: 10px 16px;
+            border-radius: 999px;
+            background: linear-gradient(135deg, #25d366 0%, #128c7e 45%, #075e54 100%);
+            color: var(--white);
+            font-size: 0.85rem;
+            font-weight: 600;
+            text-decoration: none;
+            box-shadow: 0 12px 24px rgba(7, 94, 84, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            margin-bottom: 18px;
+        }
+
+        .live-chat-whatsapp:focus-visible {
+            outline: 3px solid rgba(37, 211, 102, 0.55);
+            outline-offset: 3px;
+        }
+
+        .live-chat-whatsapp:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 16px 28px rgba(7, 94, 84, 0.3);
+        }
+
+        .live-chat-whatsapp.is-highlighted {
+            box-shadow: 0 18px 36px rgba(7, 94, 84, 0.35);
+            transform: translateY(-2px) scale(1.01);
+        }
+
+        .live-chat-whatsapp .icon {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.2);
+            font-size: 16px;
+        }
+
+        .chat-gardener {
+            position: fixed;
+            right: 124px;
+            bottom: 36px;
+            width: 140px;
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            gap: 12px;
+            z-index: 1190;
+            transform-origin: bottom center;
+            animation: gardener-bob 4.6s ease-in-out infinite;
+            pointer-events: none;
+        }
+
+        .chat-gardener.visible {
+            display: flex;
+        }
+
+        .chat-gardener-inner {
+            position: relative;
+            width: 100px;
+            height: 150px;
+        }
+
+        .gardener-shadow {
+            position: absolute;
+            bottom: -18px;
+            left: 50%;
+            width: 90px;
+            height: 24px;
+            border-radius: 50%;
+            background: radial-gradient(circle at center, rgba(0, 0, 0, 0.25), transparent 65%);
+            transform: translateX(-50%);
+            filter: blur(2px);
+        }
+
+        .gardener-body {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 120px;
+            height: 180px;
+        }
+
+        .gardener-head {
+            position: relative;
+            width: 70px;
+            height: 70px;
+            border-radius: 50%;
+            background: #f7d7c4;
+            box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.08);
+        }
+
+        .gardener-hat {
+            position: absolute;
+            top: -18px;
+            left: 50%;
+            width: 90px;
+            height: 32px;
+            background: linear-gradient(135deg, #5a9532, #3f6f1d);
+            border-radius: 50% 50% 40% 40%;
+            transform: translateX(-50%);
+            box-shadow: 0 8px 16px rgba(47, 94, 27, 0.35);
+        }
+
+        .gardener-hat::after {
+            content: '';
+            position: absolute;
+            bottom: -8px;
+            left: 50%;
+            width: 64px;
+            height: 24px;
+            background: linear-gradient(135deg, #86c06f, #4c8f2c);
+            border-radius: 40% 40% 55% 55%;
+            transform: translateX(-50%);
+        }
+
+        .gardener-eye {
+            position: absolute;
+            top: 32px;
+            width: 9px;
+            height: 12px;
+            border-radius: 50%;
+            background: #2f2f2f;
+        }
+
+        .gardener-eye--left {
+            left: 22px;
+        }
+
+        .gardener-eye--right {
+            right: 22px;
+        }
+
+        .gardener-smile {
+            position: absolute;
+            bottom: 18px;
+            left: 50%;
+            width: 32px;
+            height: 14px;
+            border-radius: 0 0 16px 16px;
+            border-bottom: 4px solid #b5651d;
+            transform: translateX(-50%);
+        }
+
+        .gardener-torso {
+            position: absolute;
+            top: 62px;
+            left: 50%;
+            width: 88px;
+            height: 72px;
+            border-radius: 40px 40px 18px 18px;
+            background: linear-gradient(135deg, #1d7a46, #145533);
+            transform: translateX(-50%);
+            box-shadow: 0 10px 18px rgba(18, 85, 51, 0.35);
+        }
+
+        .gardener-apron {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            width: 72px;
+            height: 56px;
+            background: linear-gradient(135deg, #f3b35a, #e38a21);
+            border-radius: 28px 28px 16px 16px;
+            transform: translateX(-50%);
+            box-shadow: inset 0 -6px 0 rgba(0, 0, 0, 0.12);
+        }
+
+        .gardener-pocket {
+            position: absolute;
+            bottom: 14px;
+            left: 50%;
+            width: 32px;
+            height: 24px;
+            border-radius: 12px 12px 10px 10px;
+            background: rgba(255, 255, 255, 0.75);
+            transform: translateX(-50%);
+        }
+
+        .gardener-arm {
+            position: absolute;
+            top: 78px;
+            width: 20px;
+            height: 62px;
+            border-radius: 14px;
+            background: linear-gradient(135deg, #f8dcc9, #f0c8aa);
+            transform-origin: top center;
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+            z-index: 2;
+        }
+
+        .gardener-arm--left {
+            left: -6px;
+            transform: rotate(24deg);
+        }
+
+        .gardener-arm--right {
+            right: -6px;
+            transform: rotate(-65deg);
+            animation: gardener-wave 3.6s ease-in-out infinite;
+        }
+
+        .gardener-hand {
+            position: absolute;
+            bottom: -8px;
+            left: 50%;
+            width: 24px;
+            height: 24px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, #f8dcc9, #f0c8aa);
+            transform: translateX(-50%);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
+        }
+
+        .gardener-arm--right .gardener-hand::after {
+            content: '';
+            position: absolute;
+            bottom: -4px;
+            left: 50%;
+            width: 34px;
+            height: 12px;
+            border-radius: 12px;
+            background: linear-gradient(135deg, #ffe082, #ffca28);
+            transform: translate(-10%, 40%) rotate(-12deg);
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.12);
+        }
+
+        .gardener-legs {
+            position: absolute;
+            top: 126px;
+            left: 50%;
+            width: 68px;
+            height: 52px;
+            transform: translateX(-50%);
+        }
+
+        .gardener-leg {
+            position: absolute;
+            bottom: 8px;
+            width: 24px;
+            height: 48px;
+            border-radius: 14px;
+            background: linear-gradient(135deg, #2f4c7a, #1f3656);
+            box-shadow: 0 10px 16px rgba(31, 54, 86, 0.35);
+        }
+
+        .gardener-leg--left {
+            left: 4px;
+        }
+
+        .gardener-leg--right {
+            right: 4px;
+        }
+
+        .gardener-boot {
+            position: absolute;
+            bottom: 0;
+            width: 36px;
+            height: 18px;
+            border-radius: 18px 18px 6px 6px;
+            background: linear-gradient(135deg, #3d2b1f, #2a1c13);
+        }
+
+        .gardener-boot--left {
+            left: -4px;
+        }
+
+        .gardener-boot--right {
+            right: -4px;
+        }
+
+        .chat-gardener-caption {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            padding: 8px 16px;
+            background: var(--white);
+            border-radius: 999px;
+            font-size: 0.85rem;
+            font-weight: 600;
+            color: var(--primary-dark);
+            box-shadow: 0 16px 28px rgba(0, 0, 0, 0.12);
+        }
+
+        .chat-gardener-caption::before {
+            content: '\f0eb';
+            font-family: 'Font Awesome 6 Free';
+            font-weight: 900;
+        }
+
+        @keyframes gardener-bob {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-6px);
+            }
+        }
+
+        @keyframes gardener-wave {
+            0%, 100% {
+                transform: rotate(-65deg);
+            }
+            40% {
+                transform: rotate(-30deg);
+            }
+            60% {
+                transform: rotate(-75deg);
+            }
+        }
+
+        @media (min-width: 992px) {
+            .whatsapp-button {
+                display: none;
+            }
+        }
+
+        @media (max-width: 991px) {
+            .chat-gardener {
+                display: none !important;
+            }
+        }
+
         @keyframes whatsapp-pulse {
             0% {
                 box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.4);
@@ -2913,6 +3242,39 @@
             <span class="live-chat-icon" aria-hidden="true"><i class="fas fa-comments"></i></span>
             <span class="sr-only">Open live chat</span>
         </button>
+        <div class="chat-gardener" id="chatGardener" aria-hidden="true">
+            <div class="chat-gardener-inner">
+                <div class="gardener-shadow"></div>
+                <div class="gardener-body">
+                    <div class="gardener-hat"></div>
+                    <div class="gardener-head">
+                        <span class="gardener-eye gardener-eye--left"></span>
+                        <span class="gardener-eye gardener-eye--right"></span>
+                        <span class="gardener-smile"></span>
+                    </div>
+                    <div class="gardener-torso">
+                        <div class="gardener-apron">
+                            <div class="gardener-pocket"></div>
+                        </div>
+                    </div>
+                    <div class="gardener-arm gardener-arm--left">
+                        <div class="gardener-hand"></div>
+                    </div>
+                    <div class="gardener-arm gardener-arm--right">
+                        <div class="gardener-hand"></div>
+                    </div>
+                    <div class="gardener-legs">
+                        <div class="gardener-leg gardener-leg--left">
+                            <div class="gardener-boot gardener-boot--left"></div>
+                        </div>
+                        <div class="gardener-leg gardener-leg--right">
+                            <div class="gardener-boot gardener-boot--right"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <span class="chat-gardener-caption">Help is here if you need it!</span>
+        </div>
         <div class="live-chat-window" id="liveChatWindow" aria-hidden="true">
             <div class="live-chat-header">
                 <div>
@@ -2924,6 +3286,10 @@
                 </button>
             </div>
             <div class="live-chat-body">
+                <a href="https://wa.me/447595289669" class="live-chat-whatsapp" id="liveChatWhatsAppButton" target="_blank" rel="noopener">
+                    <span class="icon"><i class="fa-brands fa-whatsapp" aria-hidden="true"></i></span>
+                    <span>Chat via WhatsApp</span>
+                </a>
                 <div class="live-chat-status-banner visible online" id="liveChatStatusBanner">Typically replies within a few minutes.</div>
                 <div class="live-chat-messages" id="liveChatMessages" role="log" aria-live="polite">
                     <div class="live-chat-empty" id="liveChatEmptyState">
@@ -3101,6 +3467,8 @@
             const liveChatInviteMessage = document.getElementById('liveChatInviteMessage');
             const liveChatInviteAccept = document.getElementById('liveChatInviteAccept');
             const liveChatInviteDecline = document.getElementById('liveChatInviteDecline');
+            const chatGardener = document.getElementById('chatGardener');
+            const liveChatWhatsAppButton = document.getElementById('liveChatWhatsAppButton');
 
             let liveChatSessionId = getStoredChatSessionId();
             let liveChatLastMessageId = 0;
@@ -3111,6 +3479,51 @@
             let liveChatHasUnread = false;
             const liveChatHandledInvites = new Set();
             let liveChatActiveInviteId = null;
+            let chatGardenerTimer = null;
+            let chatGardenerShown = false;
+
+            function isDesktopViewport() {
+                return window.matchMedia('(min-width: 992px)').matches;
+            }
+
+            function showChatGardener() {
+                if (!chatGardener || chatGardenerShown || !isDesktopViewport()) {
+                    return;
+                }
+                chatGardenerShown = true;
+                chatGardener.classList.add('visible');
+                chatGardener.setAttribute('aria-hidden', 'false');
+            }
+
+            function scheduleChatGardener() {
+                if (!chatGardener) {
+                    return;
+                }
+                if (!isDesktopViewport()) {
+                    chatGardener.classList.remove('visible');
+                    chatGardener.setAttribute('aria-hidden', 'true');
+                    chatGardenerShown = false;
+                    if (chatGardenerTimer) {
+                        clearTimeout(chatGardenerTimer);
+                        chatGardenerTimer = null;
+                    }
+                    return;
+                }
+                if (chatGardenerShown || chatGardenerTimer) {
+                    return;
+                }
+                chatGardenerTimer = window.setTimeout(() => {
+                    showChatGardener();
+                    chatGardenerTimer = null;
+                }, 20000);
+            }
+
+            scheduleChatGardener();
+            window.addEventListener('resize', () => scheduleChatGardener());
+
+            if (liveChatWhatsAppButton) {
+                liveChatWhatsAppButton.setAttribute('aria-label', 'Chat via WhatsApp (opens in a new tab)');
+            }
 
             function formatLiveChatTime(value) {
                 if (!value) return '';
@@ -3151,6 +3564,9 @@
                 }
                 if (liveChatSubmit) {
                     liveChatSubmit.disabled = !liveChatOnline;
+                }
+                if (liveChatWhatsAppButton) {
+                    liveChatWhatsAppButton.classList.toggle('is-highlighted', !liveChatOnline);
                 }
             }
 
